welcome.lessons.welcome.instructions.Instructions.scala.error
Program:2: error: too many arguments for method droite: ()Unit
droite(1)
      ^Program:4: error: too many arguments for method droite: ()Unit
droite(1)
      ^Program:6: error: too many arguments for method droite: ()Unit
droite(1)
      ^Program:8: error: too many arguments for method droite: ()Unit
droite(1)
      ^