welcome.lessons.welcome.instructions.Instructions.scala.code
avance(2)
droite(1)
avance(2)
droite(1)
avance(2)
droite(1)
avance(1)
droite(1)
avance(1)

